corrected style alignment of tag image.

--- a/sites/all/themes/alim/style.css
+++ b/sites/all/themes/alim/style.css
@@ -9823,10 +9823,10 @@ display:none;
 
 #demo
 {
-float:right;
+/*float:right;
 * float:left;
 * margin-top:-20px;
-* margin-left:50px;
+* margin-left:50px;*/
 }
 .a2
 {
